--- a/layout-responsivo-grid.css
+++ b/layout-responsivo-grid.css
@@ -1,74 +1,114 @@
-* {
-    color:indianred;
-    margin: 0px;
-    padding: 0px;
+*{
+    box-sizing: border-box;
 }
 
-body{
-    
-    display: grid;
-    background-color: #74121D;
+.row::after{
+    content: "";
+    clear: both;
+    display: table;
 }
 
-header{
-    display: flex;
-    background-color: #A51C30;
+/*Smartphone*/
+[class*="col-"]{
+    float: left;
+    width: 100%;
+    padding:15px;
 }
 
-header>h1{
-    margin-left: 1%;
-    padding-right: 1%;
-    border-right: 2px solid indianred
-}
-
-header>button{
-    width: 5%;
-    background-color: #A51C30;
-    border-style: hidden;
-    border-right: 2px solid indianred;
-    height: auto;
-}
-
-header>button:hover{
-    background-color: #580C1F;
-}
-
-#duas_colunas{
-    display: flex;
-}
-
-#duas_colunas>p{
-    margin:1%;
-}
-
-#uma_coluna>p{
-    margin:1%;
-}
-
-#rodape{
-    padding-left: 1%;
-    position: relative;
-    bottom: 0;
-    background-color: #580C1F;
-}
-
-#rodape>img{
-    width: 10%;
-    animation-name: giro;
-    animation-duration: 1s;
-    animation-iteration-count: infinite;
-}
-
-.paragrafo{
-    margin: 1%;
-}
-
-.paragrafo>h2{
-    justify-self: center;
-}
-
-@keyframes giro{
-    100%{
-        transform: rotate(360deg);
+/*Tablet*/
+@media only screen and (min-width: 600px){
+    .col-s-1{
+        width: 8.33%;
     }
+    .col-s-2{
+        width: 16.66%;
+    }
+    .col-s-3{
+        width: 25%;
+    }
+    .col-s-4{
+        width: 33.33%;
+    }
+    .col-s-5{
+        width: 41.66%;
+    }
+    .col-s-6{
+        width: 50%;
+    }
+    .col-s-7{
+        width: 58.33%;
+    }
+    .col-s-8{
+        width: 66.66%;
+    }
+
+    .col-s-9{
+        width: 75%;
+    }
+    .col-s-10{
+        width: 83.33%;
+    }
+    .col-s-11{
+        width: 91.66%;
+    }
+    .col-s-12{  
+        width: 100%;
+    }
+}
+
+/*PC*/
+@media only screen and (min-width: 700px){
+    .col-1{
+        width: 8.33%;
+    }
+    .col-2{
+        width: 16.66%;
+    }
+    .col-3{
+        width: 25%;
+    }
+    .col-4{
+        width: 33.33%;
+    }
+    .col-5{
+        width: 41.66%;
+    }
+    .col-6{
+        width: 50%;
+    }
+    .col-7{
+        width: 58.33%;
+    }
+    .col-8{
+        width: 66.66%;
+    }
+
+    .col-9{
+        width: 75%;
+    }
+    .col-10{
+        width: 83.33%;
+    }
+    .col-11{
+        width: 91.66%;
+    }
+    .col-12{  
+        width: 100%;
+    }
+}
+
+.purple{
+    background-color: blueviolet
+}
+
+.yellow{
+    background-color: yellow;
+}
+
+.green{
+    background-color: green;
+}
+
+.blue{
+    background-color: blue;
 }
